# mtes

./: .gitignore  AGENTS.md  DEVELOPMENT_PLAN.md  LICENSE  MANUAL_TESTING_PLAN.md  README.md  pyproject.toml
config/: config.example.yaml
config/fixtures/: golden_dataset.jsonl  golden_prompts.jsonl
data/golden/: genomes.jsonl  prompts.jsonl
docker/: .env.example  Dockerfile  docker-compose.yml
docs/: acceptance_traceability.md  architecture_specification.md  bootstrap_specification.md  data_model_specification.md  detailed_design.md  genetic_encoding_and_evolution_specification.md  genotype_phenotype_mapping_specification.md  llm_Interaction_specification.md  software_requirements_specification.md
docs/runbooks/: trial_publication.md
scripts/: create_vector_indexes.py  ensure_mongodb_indexes.py  generate_golden_assets.py  run_maintenance.py
src/mtes/: __init__.py  docker_stub.py
src/mtes/cli/: context.py  exit_codes.py  main.py
src/mtes/core/: __init__.py  bootstrap_pipeline.py  bootstrap_report_service.py  bootstrap_stages.py  (+12 more)
tests/fixtures/: dictionary_terms.json
tests/integration/: test_maintenance_ttl.py  test_mongo_client.py  test_operational_repositories.py  test_pipeline_evolution.py  test_repositories.py
tests/unit/: test_bootstrap_module.py  test_candidate_expansion.py  test_cli.py  test_config.py  test_constraint_expansion.py  test_daemon_service.py  test_dictionary_service.py  test_embedding_model_metadata.py  test_embedding_service.py  test_evolution_bootstrap_gate.py  test_ga_operators.py  test_generation_pipeline.py  test_genotype_phenotype_distance.py  test_golden_assets.py  test_in_memory_cosine_retrieval.py  test_llm_provider_chain.py  test_maintenance_worker.py  test_mongodb_indexes.py  test_monitoring_http.py  test_numeric_lut.py  test_operator_auth.py  test_package.py  test_prompt_router.py  test_rate_limiter.py  test_relation_structural_plan.py  test_report_service.py  test_retry_policy.py  test_semantic_expansion_anchor.py  test_telegram_publication.py  test_tokenization_metrics.py  test_validation_repair_fitness.py  test_vector_indexes.py  test_workflow_coordinator.py
(+67 files in other folders)
